# DcFriend_legacy

./: .coverage  .env.example  .gitignore  DEVELOPMENT.md  Dev.md  README.md  alembic.ini  create_test_files.sh  debug_api_server.py  diag_bot.py  main.py  pyproject.toml
alembic/: env.py
data/characters/: GO.json  kanban_musume.json
src/api/: endpoints.py
src/cogs/: chat_cog.py
src/core/: character_manager.py  character_model.py  config.py  container.py  prompt_manager.py
src/db/: models.py  session.py
src/db/repositories/: __init__.py  event_repository.py  member_repository.py
src/dcfriend_legacy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/prompts/: simple_chat.txt
src/services/: ai_service.py  gemini_client.py  member_service.py  memory_service.py
src/services/memory/: abstract_memory_service.py  hardcoded_memory_service.py
tests/: conftest.py
tests/api/: test_endpoints.py
tests/cogs/: test_chat_cog.py
tests/core/: test_character_manager.py  test_character_model.py  test_config.py  test_container.py
tests/db/: conftest.py  test_member_repository.py  test_models.py  test_session.py
tests/db/repositories/: test_event_repository.py  test_member_repository.py
tests/services/: test_ai_service.py  test_gemini_client.py  test_member_service.py
tests/services/memory/: test_abstract_memory_service.py  test_hardcoded_memory_service.py
